@@ -17,7 +17,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.12.RELEASE</version>
+        <version>2.7.9</version>
         <relativePath/>
     </parent>
 
@@ -254,7 +254,6 @@
         <license-maven-plugin>1.20</license-maven-plugin>
         <log4j2.version>2.17.1</log4j2.version>
         <lutung.version>0.0.8</lutung.version>
-        <junit-surefire-provider.version>1.1.0</junit-surefire-provider.version>
         <kie.version>7.39.0.Final</kie.version>
         <klarna-sdk.version>4.0.3</klarna-sdk.version>
         <magicsuggest-webjars.version>2.1.4</magicsuggest-webjars.version>
@@ -334,7 +333,6 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <protobuf.version>3.10.0</protobuf.version>
         <protobuf-java-format.version>1.4</protobuf-java-format.version>
-        <powermock.version>2.0.7</powermock.version>
         <recaptcha4j.version>0.0.7</recaptcha4j.version>
         <reflections.version>0.9.12</reflections.version>
         <redis-embedded.version>0.6</redis-embedded.version>
@@ -344,8 +342,8 @@
         <riskified.version>1.2.7</riskified.version>
         <rometools.version>1.12.2</rometools.version>
         <selenium.version>3.9.1</selenium.version>
-        <byte-buddy-agent.version>1.10.9</byte-buddy-agent.version>
-        <byte-buddy.version>1.10.9</byte-buddy.version>
+        <!--byte-buddy-agent.version>1.12</byte-buddy-agent.version>
+        <byte-buddy.version>1.12</byte-buddy.version-->
         <selenium-htmlunit.version>3.9.1</selenium-htmlunit.version>
         <smartsprites.version>0.2.13</smartsprites.version>
         <smartystreets.version>3.7.0</smartystreets.version>
@@ -1199,6 +1197,11 @@
                 <groupId>com.github.debop</groupId>
                 <artifactId>hibernate-redis</artifactId>
                 <version>${redis-hibernate.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.hazelcast</groupId>
+                <artifactId>hazelcast-client</artifactId>
+                <version>${hazelcast.version}</version>
             </dependency>
             <dependency>
                 <groupId>net.joelinn</groupId>
@@ -2373,26 +2376,6 @@
                 <version>${yandex-ashot.version}</version>
             </dependency>
             <dependency>
-                <groupId>net.bytebuddy</groupId>
-                <artifactId>byte-buddy</artifactId>
-                <version>${byte-buddy.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>net.bytebuddy</groupId>
-                <artifactId>byte-buddy-agent</artifactId>
-                <version>${byte-buddy-agent.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.powermock</groupId>
-                <artifactId>powermock-module-junit4</artifactId>
-                <version>${powermock.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.powermock</groupId>
-                <artifactId>powermock-api-mockito2</artifactId>
-                <version>${powermock.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.easymock</groupId>
                 <artifactId>easymock</artifactId>
                 <version>${easymock.version}</version>
@@ -3084,7 +3067,7 @@
                 <spotbugs.omitvisitors>SerializableIdiom,FindUnsatisfiedObligation,FindReturnRef,FindNullDeref
                 </spotbugs.omitvisitors> <!--FindNullDeref is here because of https://github.com/spotbugs/spotbugs/issues/756 -->
                 <java.version>11</java.version>
-                <extra.jvmargs>--illegal-access=permit</extra.jvmargs>
+                <extra.jvmargs>--illegal-access=permit --add-opens java.base/java.lang=ALL-UNNAMED</extra.jvmargs>
             </properties>
             <activation>
                 <jdk>[9,</jdk>
